--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,3 +70,5 @@ jobs:
             composer install --no-interaction --prefer-dist --optimize-autoloader
             npm install --legacy-peer-deps
             npm run build
+            php artisan inertia:stop-ssr || true
+            php artisan inertia:start-ssr
