fix: cicd again

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,7 @@ jobs:
           port: ${{ secrets.INPUT_PORT }}
           script: |
             cd ${{ secrets.VPS_APP_PATH }}
+            git config --global --add safe.directory ${{ secrets.VPS_APP_PATH }}
             git pull origin main
             composer install --no-interaction --prefer-dist --optimize-autoloader
             npm install --legacy-peer-deps
