--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,5 +72,7 @@ jobs:
             composer install --no-interaction --prefer-dist --optimize-autoloader
             npm install --legacy-peer-deps
             npm run build
+            php artisan view:clear
+            php artisan cache:clear
             php artisan inertia:stop-ssr || true
             php artisan inertia:start-ssr
