feat: cicd - clear cache

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,5 +74,7 @@ jobs:
             npm run build
             php artisan view:clear
             php artisan cache:clear
+            php artisan config:clear
+            php artisan route:clear
             php artisan inertia:stop-ssr || true
             php artisan inertia:start-ssr
