--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,8 +69,8 @@ jobs:
             git config --global --add safe.directory ${{ secrets.VPS_APP_PATH }}
             git pull origin main
             export COMPOSER_ALLOW_SUPERUSER=1
-            composer install --no-interaction --prefer-dist --optimize-autoloader
-            npm install --legacy-peer-deps
+            composer install --no-interaction
+            npm install
             npm run build
             php artisan view:clear
             php artisan cache:clear
